@@ -24,24 +24,70 @@
 #define _LINUX_NTFS_ENDIAN_H
 
 #include <asm/byteorder.h>
+#include "types.h"
 
 /*
- * Signed endianness conversion defines.
+ * Signed endianness conversion functions.
  */
-#define sle16_to_cpu(x)		((s16)__le16_to_cpu((s16)(x)))
-#define sle32_to_cpu(x)		((s32)__le32_to_cpu((s32)(x)))
-#define sle64_to_cpu(x)		((s64)__le64_to_cpu((s64)(x)))
 
-#define sle16_to_cpup(x)	((s16)__le16_to_cpu(*(s16*)(x)))
-#define sle32_to_cpup(x)	((s32)__le32_to_cpu(*(s32*)(x)))
-#define sle64_to_cpup(x)	((s64)__le64_to_cpu(*(s64*)(x)))
+static inline s16 sle16_to_cpu(sle16 x)
+{
+	return le16_to_cpu((__force le16)x);
+}
 
-#define cpu_to_sle16(x)		((s16)__cpu_to_le16((s16)(x)))
-#define cpu_to_sle32(x)		((s32)__cpu_to_le32((s32)(x)))
-#define cpu_to_sle64(x)		((s64)__cpu_to_le64((s64)(x)))
+static inline s32 sle32_to_cpu(sle32 x)
+{
+	return le32_to_cpu((__force le32)x);
+}
 
-#define cpu_to_sle16p(x)	((s16)__cpu_to_le16(*(s16*)(x)))
-#define cpu_to_sle32p(x)	((s32)__cpu_to_le32(*(s32*)(x)))
-#define cpu_to_sle64p(x)	((s64)__cpu_to_le64(*(s64*)(x)))
+static inline s64 sle64_to_cpu(sle64 x)
+{
+	return le64_to_cpu((__force le64)x);
+}
+
+static inline s16 sle16_to_cpup(sle16 *x)
+{
+	return le16_to_cpu(*(__force le16*)x);
+}
+
+static inline s32 sle32_to_cpup(sle32 *x)
+{
+	return le32_to_cpu(*(__force le32*)x);
+}
+
+static inline s64 sle64_to_cpup(sle64 *x)
+{
+	return le64_to_cpu(*(__force le64*)x);
+}
+
+static inline sle16 cpu_to_sle16(s16 x)
+{
+	return (__force sle16)cpu_to_le16(x);
+}
+
+static inline sle32 cpu_to_sle32(s32 x)
+{
+	return (__force sle32)cpu_to_le32(x);
+}
+
+static inline sle64 cpu_to_sle64(s64 x)
+{
+	return (__force sle64)cpu_to_le64(x);
+}
+
+static inline sle16 cpu_to_sle16p(s16 *x)
+{
+	return (__force sle16)cpu_to_le16(*x);
+}
+
+static inline sle32 cpu_to_sle32p(s32 *x)
+{
+	return (__force sle32)cpu_to_le32(*x);
+}
+
+static inline sle64 cpu_to_sle64p(s64 *x)
+{
+	return (__force sle64)cpu_to_le64(*x);
+}
 
 #endif /* _LINUX_NTFS_ENDIAN_H */
